<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">Notes</string>
    <string name="clear">Clear</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="widget_config">Thank you for using Fossify Notes.\nFor more apps from Fossify, please visit fossify.org.</string>
    <string name="cannot_share_empty_text">Cannot share empty text</string>
    <string name="new_note">Add a new note</string>
    <string name="no_title">Please name your note</string>
    <string name="title_taken">A note with that title already exists</string>
    <string name="open_note">Open note</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_note_prompt_message">Are you sure you want to delete note \"%s\"?</string>
    <string name="pick_a_note">Pick a note</string>
    <string name="rename_note">Rename note</string>
    <string name="general_note">General note</string>
    <string name="create_new_note">Create a new note</string>
    <string name="add_to_note">Add to note</string>
    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
    <string name="note_shown_widget">Note shown in the widget:</string>
    <string name="show_note_title">Show note title</string>
    <string name="new_note_type">New note type:</string>
    <string name="text_note">Text note</string>
    <string name="lock_note">Lock note</string>
    <string name="unlock_note">Unlock note</string>
    <string name="unlock_notes">Unlock notes</string>
    <string name="found_locked_notes_info">The following notes are locked. You can either unlock them one by one or skip exporting them.</string>
    <string name="note_content_locked">The notes\' content is locked.</string>
    <string name="show_content">Show content</string>
    <string name="locking_warning">WARNING: If you forget the notes\' password, you won\'t be able to recover it or access the notes\' content anymore.</string>
    <string name="new_text_note">New text note</string>
    <string name="new_checklist">New checklist</string>
    <string name="cannot_load_over_internet">The app cannot load files over the internet</string>
    <string name="allow_alarm_automatic_backups">To backup notes automatically, please grant the app permission to schedule exact alarms.</string>

    <!-- File notes -->
    <string name="open_file">Open file</string>
    <string name="export_as_file">Export as file</string>
    <string name="file_too_large">File too large, the limit is 1MB</string>
    <string name="only_import_file_content">Only import the file content\n(changing the file will not affect the note)</string>
    <string name="update_file_at_note">Update the file itself at updating the note\n(note gets deleted if file gets deleted, or path changes)</string>
    <string name="delete_file_itself">Also delete file \"%s\"</string>
    <string name="note_saved_successfully">Note \"%s\" saved successfully</string>
    <string name="note_exported_successfully">Note \"%s\" exported successfully</string>
    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
    <string name="this_note_is_linked">This note is linked with a local file.</string>

    <!-- Settings -->
    <string name="display_success_message">Display save success messages</string>
    <string name="links_and_emails_clickable">Make links and emails clickable</string>
    <string name="place_cursor_end">Place cursor to the end of note</string>
    <string name="monospaced_font">Use monospaced font</string>
    <string name="show_keyboard">Show keyboard on startup</string>
    <string name="show_word_count">Show word count</string>
    <string name="show_character_count">Show character count</string>
    <string name="alignment">Alignment</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="widget_note">Note used in widget</string>
    <string name="show_note_picker">Show a note picker on startup</string>
    <string name="autosave_notes">Autosave notes</string>
    <string name="enable_line_wrap">Enable line wrap</string>
    <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
    <string name="move_done_checklist_items">Move checked items to the bottom</string>
    <string name="add_new_checklist_items_top">Add new checklist items at the top</string>
    <string name="password_protect_note_deletion">Password protect note deletion</string>

    <!-- Checklists -->
    <string name="checklist">Checklist</string>
    <string name="checklists">Checklists</string>
    <string name="add_new_checklist_item">Add a new checklist item</string>
    <string name="add_new_checklist_items">Add new checklist items</string>
    <string name="checklist_is_empty">The checklist is empty</string>
    <string name="delete_checked_items">Delete checked items</string>
    <string name="uncheck_all_items">Uncheck all items</string>
    <string name="add_to_the_top">Add to the top</string>
    <string name="use_for_this_checklist">Use for this checklist only</string>
    <plurals name="num_checked_items">
        <item quantity="one">%d checked item</item>
        <item quantity="other">%d checked items</item>
    </plurals>

    <!-- Import / Export -->
    <string name="import_folder">Import folder</string>
    <string name="export_notes">Export notes</string>
    <string name="import_notes">Import notes</string>
    <string name="import_notes_pro">Import notes (Pro)</string>

    <!-- FAQ -->
    <string name="faq_1_title">How can I change the widgets color?</string>
    <string name="faq_1_text">In case you have only 1 active widget, you can either recreate it, or use the button in the app settings for customizing it. If you have multiple active widgets, the button in the app settings will not be available. As the app supports color customization per-widget, you will have to recreate the widget that you want to customize.</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->
</resources>
