<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/m3_spacing_large"
    android:paddingTop="@dimen/m3_spacing_small"
    android:paddingEnd="@dimen/m3_spacing_large">

    <org.fossify.commons.views.MyTextInputLayout
        android:id="@+id/note_title_hint"
        style="@style/Widget.Notes.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m3_spacing_medium"
        android:layout_marginBottom="@dimen/m3_spacing_medium"
        android:hint="@string/label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locked_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size" />

    </org.fossify.commons.views.MyTextInputLayout>

    <org.fossify.commons.views.MyTextView
        android:id="@+id/new_note_type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/m3_spacing_small"
        android:text="@string/new_note_type"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/new_note_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/m3_spacing_small">

        <org.fossify.commons.views.MyCompatRadioButton
            android:id="@+id/type_text_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingTop="@dimen/m3_spacing_small"
            android:paddingBottom="@dimen/m3_spacing_small"
            android:text="@string/text_note" />

        <org.fossify.commons.views.MyCompatRadioButton
            android:id="@+id/type_checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/m3_spacing_small"
            android:paddingBottom="@dimen/m3_spacing_small"
            android:text="@string/checklist" />

    </RadioGroup>
</LinearLayout>
