<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checklist_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/checklist_items_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/note_locked_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/m3_spacing_medium"
            android:visibility="gone">

            <ImageView
                android:id="@+id/note_locked_image"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/m3_spacing_large"
                android:contentDescription="@string/note_content_locked"
                android:src="@drawable/ic_lock_vector" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/note_locked_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_locked_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/m3_spacing_medium"
                android:paddingStart="@dimen/m3_spacing_large"
                android:paddingTop="@dimen/m3_spacing_small"
                android:paddingEnd="@dimen/m3_spacing_large"
                android:text="@string/note_content_locked" />

            <TextView
                android:id="@+id/note_locked_show"
                style="@style/Widget.Notes.PillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/note_locked_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/m3_spacing_medium"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:text="@string/show_content" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/checklist_content_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <org.fossify.commons.views.MyRecyclerView
                android:id="@+id/checklist_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingTop="@dimen/m3_spacing_small"
                android:paddingBottom="@dimen/secondary_fab_bottom_margin"
                android:visibility="gone"
                app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/fragment_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m3_spacing_large"
                android:alpha="0.8"
                android:gravity="center"
                android:paddingStart="@dimen/m3_spacing_medium"
                android:paddingEnd="@dimen/m3_spacing_medium"
                android:text="@string/checklist_is_empty"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:textSize="@dimen/bigger_text_size"
                android:textStyle="italic"
                android:visibility="gone" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/fragment_placeholder_2"
                style="@style/Widget.Notes.PillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_placeholder"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/m3_spacing_medium"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:paddingStart="@dimen/m3_spacing_large"
                android:paddingEnd="@dimen/m3_spacing_large"
                android:text="@string/add_new_checklist_items"
                android:textSize="@dimen/bigger_text_size"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <org.fossify.commons.views.MyFloatingActionButton
        android:id="@+id/checklist_fab"
        style="@style/Widget.Notes.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/m3_spacing_medium"
        android:contentDescription="@string/add_new_checklist_items"
        android:src="@drawable/ic_plus_vector"
        app:applyWindowInsets="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
